Sorting reviews + Adding landing page as root

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <header>
       <nav>
         <ul>
-          <li><%= link_to "Home", products_path %> | <%= link_to "New Product", new_product_path %> </li>
+          <li><%= link_to "Home", root_path %> | <%= link_to "Products", products_path %> </li> | <%= link_to "New Product", new_product_path %> </li>
         </ul>
       </nav>
     </header>
