--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,3 @@
-
 <h1><%= @product.name %></h1>
 
 <%= link_to 'Edit', edit_product_path %> |
@@ -10,17 +9,8 @@
 
 <h2>Reviews</h2>
 
-<ul>
-  <% @product.reviews.each do |review| -%>
-    <li>
-      <%= review.comment %>
-      <%= review.created_at %>
-      <%= link_to 'Edit Comment', edit_product_review_path(@product, review) %>
-      <%= link_to 'Delete', product_review_path(@product, review), method: :delete, data: {confirm: "Are you sure you want to delete this review?"} %>
-    </li>
-  <% end %>
-</ul>
+<%= render 'list_reviews', product: @product %>
 
 <h2>Add Comment</h2>
 
-<%= render './reviews/form', product: @product, review: @review %>
+<%= render 'reviews/form', product: @product, review: @review %>
