Adding logout functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,26 @@
     <header>
       <nav>
         <ul>
-          <li><%= link_to "Home", root_path %> | <%= link_to "Products", products_path %> </li> | <%= link_to "New Product", new_product_path %> </li>
+          <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Products", products_path %></li>
+           <li><%= link_to "New Product", new_product_path %></li>
+
+           <% if current_user %>
+             <p>
+               <%= link_to 'Logout', session_path, method: :delete %>
+             </p>
+             <p>Hello <%= current_user.email %>!</p>
+           <% else %>
+             <p><%= link_to 'New User', new_user_path %></p>
+             |
+             <p><%= link_to 'Login', new_session_path %></p>
+             <p>Please login to see your balance</p>
+           <% end %>
         </ul>
+
+        <p class="user-info">
+
+        </p>
       </nav>
     </header>
     <%= yield %>
