Style changes for testing + installing carrierwave & materialize-sass

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
+@import 'generic/_reset';
 @import 'settings/*';
 // @import 'tools/*';
-@import 'generic/_reset';
 @import 'generic/_box_sizing';
 @import 'generic/_shared';
 // @import 'elements/*';
 // @import 'objects/*';
-// @import 'components/*';
+@import 'components/*';
