--- a/app/assets/stylesheets/generic/_shared.scss
+++ b/app/assets/stylesheets/generic/_shared.scss
@@ -1,9 +1,27 @@
 h1, h2, h3, h4, h5 {
   font-family: $headings-font;
   font-size: $font-size * 2;
+  color: $headings-colour;
 }
 
 body {
   font-family: $body-font;
   font-size: $font-size;
+  color: $body-colour;
+}
+
+#container {
+  width: 95vw;
+  height: 95vh;
+  margin: 0 auto;
+  background-color: rgba($container-colour, 0.5)
+}
+
+a {
+  text-decoration: none;
+  color: $link-inactive-colour;
+
+  &:hover {
+    color: $link-hover-colour;
+  }
 }
