--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
-@import 'generic/_reset';
+@import "materialize";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import 'settings/*';
 // @import 'tools/*';
 @import 'generic/_box_sizing';
