--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,5 +7,6 @@
     <p>Description: <%= product.description %></p>
     <p>Price: <%= product.price_in_dollars %></p>
     <%= link_to 'Show', product_path(product) %>
+    <img src="<%= product.image.pinterest.url %>" alt="<%= product.name %>">
   </section>
 <% end %>
