--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,6 +5,7 @@
 
 <p>Description: <%= @product.description %></p>
 <p>Price: <%= @product.price_in_dollars %></p>
+<img src="<%= @product.image.pinterest.url %>" alt="<%= @product.name %>">
 
 
 <h2>Reviews</h2>
