--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import "materialize/components/color";
 @import "materialize";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 @import 'settings/*';
