--- a/app/assets/stylesheets/settings/_colours.scss
+++ b/app/assets/stylesheets/settings/_colours.scss
@@ -2,5 +2,5 @@ $container-colour: #DCDCDC;
 $header-colour:  #3F3F3F;
 $headings-colour: #DCAE1D;
 $body-colour: #00303F;
-$link-inactive-colour: #fff;
+$link-inactive-colour: red;
 $link-hover-colour: #600473;
