--- a/app/assets/stylesheets/generic/_shared.scss
+++ b/app/assets/stylesheets/generic/_shared.scss
@@ -12,9 +12,8 @@ body {
 
 #container {
   width: 95vw;
-  height: 95vh;
   margin: 0 auto;
-  background-color: rgba($container-colour, 0.5)
+  // background-color: rgba($container-colour, 0.5)
 }
 
 a {
