--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,34 +11,30 @@
   </head>
 
   <body>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="<%= edit_users_path %>" class="brand-logo">
+          <img class="nav-user__avatar circle" src="<%= current_user.avatar.thumb.url %> " alt="<%= current_user.name %>">
+          <span class="nav-user__name"><%= current_user.name %></span>
+        </a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><%= link_to "Home", root_path %></li>
+          <% if current_user %>
+            <li>
+              <%= link_to 'Logout', session_path(current_user), method: :delete %>
+            </li>
+            <li><%= link_to "Products", products_path %></li>
+            <li><%= link_to "New Product", new_product_path %></li>
+          <% else %>
+            <li><%= link_to 'New User', new_user_path %></li>
+            <li><%= link_to 'Login', new_session_path %></li>
+            <br>
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+
     <div id="container">
-      <header>
-        <nav class="nav-wrapper">
-          <a href="<%= edit_users_path %>" class="brand-logo">
-            <img class="nav-user__avatar circle" src="<%= current_user.avatar.thumb.url %> " alt="<%= current_user.name %>">
-            <%= current_user.name %>
-          </a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><%= link_to "Home", root_path %></li>
-            <% if current_user %>
-              <li>
-                <%= link_to 'Logout', session_path(current_user), method: :delete %>
-              </li>
-              <li><%= link_to "Products", products_path %></li>
-              <li><%= link_to "New Product", new_product_path %></li>
-            <% else %>
-              <li><%= link_to 'New User', new_user_path %></li>
-              <li><%= link_to 'Login', new_session_path %></li>
-              <br>
-            <% end %>
-
-          </ul>
-
-          <p class="user-info">
-
-          </p>
-        </nav>
-      </header>
       <%= yield %>
     </div>
   </body>
