--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -22,7 +22,12 @@
 
   <div class="input_wrapper">
     <%= f.label :price %>
-    <%= f.number_field :price %>
+    <%= f.number_field :price, { step: "0.01" } %>
+  </div>
+
+  <div class="input_wrapper">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
   </div>
 
   <div class="input_wrapper">
