--- a/app/assets/stylesheets/components/_masonry.scss
+++ b/app/assets/stylesheets/components/_masonry.scss
@@ -7,12 +7,11 @@
   -webkit-column-gap: 1.5em;
   width: 80%;
   column-gap: 1.5em;
-  font-size: .85em;
 }
 
 .item {
   display: inline-block;
-  background: red;
+  background: #8C95AA;
   padding: 1em;
   margin: 0 0 1.5em;
   width: 100%;
