--- a/app/assets/stylesheets/settings/_colours.scss
+++ b/app/assets/stylesheets/settings/_colours.scss
@@ -1,10 +1,11 @@
 $container-colour: #DCDCDC;
 $header-colour:  #3F3F3F;
-$headings-colour: #DCAE1D;
+$headings-colour: #000;
+$h3-colour: #FFF;
 $body-colour: #00303F;
 $link-inactive-colour: red;
-$link-hover-colour: #600473;
-$user-name-colour: #F2C640;
+$link-hover-colour: #1098F7;
+$user-name-colour: #1098F7;
 
 // Materialize palette
 
