--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,24 +1,29 @@
-<%= form_for([product, review]) do |f| %>
+<div class="row">
+  <div class="col s12 m6 offset-m3 review-form">
+    <%= form_for([product, review]) do |f| %>
 
-  <% if review.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
+      <% if review.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
-      <ul>
-        <% review.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+          <ul>
+            <% review.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <div class="input_wrapper">
-    <%= f.label :comment %>
-    <%= f.text_field :comment %>
+      <div class="input-field">
+        <%= f.label :comment %>
+        <%= f.text_field :comment %>
+      </div>
+
+      <div class="input-field">
+        <%= f.submit 'Save', { class: "btn" } %>
+      </div>
+
+    <% end %>
+
   </div>
-
-  <div class="input_wrapper">
-    <%= f.submit %>
-  </div>
-
-<% end %>
+</div>
