--- a/app/assets/stylesheets/generic/_shared.scss
+++ b/app/assets/stylesheets/generic/_shared.scss
@@ -1,7 +1,19 @@
-h1, h2, h3, h4, h5 {
+h1 {
   font-family: $headings-font;
+  font-size: $font-size * 5;
+  color: red;
+}
+
+h2 {
+  margin: 100px;
+  text-align: center;
   font-size: $font-size * 2;
-  color: $headings-colour;
+}
+
+h3 {
+  font-size: $h3-font-size;
+  color: $h3-colour;
+  font-weight: bold;
 }
 
 body {
@@ -11,14 +23,12 @@ body {
 }
 
 #container {
-  width: 95vw;
+  width: 85vw;
   margin: 0 auto;
-  // background-color: rgba($container-colour, 0.5)
 }
 
 a {
   text-decoration: none;
-  color: $link-inactive-colour;
 
   &:hover {
     color: $link-hover-colour;
