--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="masonry">
   <% @products.each do |product| %>
-    <section class="item">
+    <section class="item hoverable">
       <h3><%= product.name %></h3>
       <p><%= product.description %></p>
       <p>Price: <%= product.price_in_dollars %></p>
