--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,37 +1,3 @@
-<h1>New Product</h1>
+<h2>New Product</h2>
 
-<%= form_for @product do |f| %>
-
-<% if @product.errors.any? %>
-<ul>
-  <% @product.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
-  <% end %>
-</ul>
-<% end %>
-
-  <div class="input_wrapper">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.label :price %>
-    <%= f.number_field :price, { step: "0.01" } %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.submit %> | <%= link_to 'Cancel', products_path  %>
-  </div>
-
-<% end -%>
+<%= render 'form', product: @product %>
