--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,18 @@
-<h1><%= @product.name %></h1>
+<main class="row">
+  <div class="main-info col m8 left-align">
+    <h1><%= @product.name %></h1>
 
-<%= link_to 'Edit', edit_product_path %> |
-<%= link_to 'Delete', product_path, method: :delete, data: {confirm: "Are you sure you want to delete this product?"} %>
+    <%= link_to 'Edit', edit_product_path %> |
+    <%= link_to 'Delete', product_path, method: :delete, data: {confirm: "Are you sure you want to delete this product?"} %>
 
-<p>Description: <%= @product.description %></p>
-<p>Price: <%= @product.price_in_dollars %></p>
-<img src="<%= @product.image.pinterest.url %>" alt="<%= @product.name %>">
+    <p>Description: <%= @product.description %></p>
+    <p>Price: <%= @product.price_in_dollars %></p>
+  </div>
 
+  <div class="main-image col m4 center-align">
+    <img src="<%= @product.image.pinterest.url %>" alt="<%= @product.name %>">
+  </div>
+</main>
 
 <h2>Reviews</h2>
 
