--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,32 +1,36 @@
-<%= form_for user do |f| %>
+<div class="row">
+  <div class="col s12 m6 offset-m3">
+    <%= form_for user do |f| %>
 
-  <div class="input_wrapper">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+      <div class="input-field">
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :avatar, 'Image' %>
+        <%= f.file_field :avatar %>
+      </div>
+
+      <div class="input-field">
+        <%= f.submit 'Log in', { class: "btn" } %>
+      </div>
+
+    <% end %>
   </div>
-
-  <div class="input_wrapper">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.label :avatar, 'Image' %>
-    <%= f.file_field :avatar %>
-  </div>
-
-  <div class="input_wrapper">
-    <%= f.submit 'Log in' %>
-  </div>
-
-<% end %>
+</div>
