Adding image to landing page 💅

--- a/app/assets/stylesheets/components/_landing.scss
+++ b/app/assets/stylesheets/components/_landing.scss
@@ -6,4 +6,7 @@
   justify-content: center;
   margin: 0;
   padding: 0;
+  background-image: url('https://images-na.ssl-images-amazon.com/images/I/81D8ueVCzcL._SL1500_.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
