--- a/app/assets/stylesheets/generic/_shared.scss
+++ b/app/assets/stylesheets/generic/_shared.scss
@@ -1,7 +1,7 @@
 h1 {
   font-family: $headings-font;
-  font-size: $font-size * 5;
-  color: red;
+  font-size: $font-size * 7;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 h2 {
