--- a/app/assets/stylesheets/settings/_colours.scss
+++ b/app/assets/stylesheets/settings/_colours.scss
@@ -3,7 +3,7 @@ $header-colour:  #3F3F3F;
 $headings-colour: #000;
 $h3-colour: #FFF;
 $body-colour: #00303F;
-$link-inactive-colour: red;
+// $link-inactive-colour: red;
 $link-hover-colour: #1098F7;
 $user-name-colour: #1098F7;
 
