Fixing form path for edit users + style changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,6 @@
 // @import 'tools/*';
 @import 'generic/_box_sizing';
 @import 'generic/_shared';
-// @import 'elements/*';
+@import 'elements/*';
 // @import 'objects/*';
 @import 'components/*';
