--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,3 +1,8 @@
 <div class="landing-container">
   <h1>CHOCOLATEUR</h1>
+  <br>
+  <div class="landing-btn btn">
+    <%= link_to "Products", products_path %>
+  </div>
+
 </div>
