--- a/app/assets/stylesheets/components/_landing.scss
+++ b/app/assets/stylesheets/components/_landing.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   position: absolute;
